# thaler-multisig-demo

./: .gitignore  Cargo.toml  README.md  multi-sig.db
backend/: .env  Cargo.toml  README.md  generate-record.js  multi-sig.db  swagger.yaml
backend/.client-storage/: conf  snap.000000000001D7FF
backend/db/: db.sql
backend/migrations/2019-08-02-061602_init/: down.sql  up.sql
backend/src/: db.rs  lib.rs  main.rs  models.rs  schema.rs
db/: setup_db.sh
frontend/: README.md  angular.json  package-lock.json  package.json  tslint.json
frontend/apps/frontend/src/: index.html  styles.scss
frontend/apps/frontend/src/app/: api.service.spec.ts  api.service.ts  app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  escrow-merchant.service.spec.ts  escrow-merchant.service.ts
frontend/apps/frontend/src/app/dashboard/: dashboard.component.ts
frontend/apps/frontend/src/app/mark-order-form/: mark-order-form.component.html  mark-order-form.component.scss  mark-order-form.component.spec.ts  mark-order-form.component.ts
frontend/apps/frontend/src/app/order-list/: order-list.component.ts
frontend/apps/frontend/src/app/order-table/: order-table.component.html  order-table.component.scss  order-table.component.spec.ts  order-table.component.ts
frontend/apps/frontend/src/app/order-table/action-cell/: action-cell.component.html  action-cell.component.scss  action-cell.component.ts
frontend/apps/frontend/src/app/order-table/status-cell/: status-cell.component.html  status-cell.component.scss  status-cell.component.ts
frontend/apps/frontend/src/app/order-table/transaction-id-cell/: transaction-id-cell.component.html  transaction-id-cell.component.scss  transaction-id-cell.component.spec.ts  transaction-id-cell.component.ts
frontend/apps/frontend/src/app/order-tableaction-cell/: order-tableaction-cell.component.html  order-tableaction-cell.component.spec.ts  order-tableaction-cell.component.ts
frontend/apps/frontend/src/app/orders/: current-orders.service.spec.ts  current-orders.service.ts  orders.component.html  orders.component.scss  orders.component.ts
frontend/apps/frontend/src/app/side-navmenu/: side-navmenu.component.html  side-navmenu.component.scss  side-navmenu.component.spec.ts  side-navmenu.component.ts
postman/: postman_collection.json  postman_environment.json
src/: db.rs  main.rs
